[gd_scene load_steps=8 format=3 uid="uid://b0qvmacfrffh2"]

[ext_resource type="Script" path="res://Components/PlaceItemInteractable/place_item_interactable.gd" id="1_odatr"]
[ext_resource type="PackedScene" uid="uid://d3disugmcknvo" path="res://Components/InteractionArea/interaction_area.tscn" id="2_dda3f"]
[ext_resource type="PackedScene" uid="uid://cmog2buogarup" path="res://Objects/ItemPickup/item_pickup.tscn" id="2_m2hek"]
[ext_resource type="Script" path="res://Components/InteractionArea/InventoryRequirementInteractionArea/inventory_requirement_interaction_area.gd" id="3_epj6w"]
[ext_resource type="Script" path="res://Resources/item_data.gd" id="4_6gc8i"]
[ext_resource type="Script" path="res://Resources/inventory_requirement.gd" id="6_vb4kk"]

[sub_resource type="Resource" id="Resource_n50sa"]
resource_local_to_scene = true
script = ExtResource("6_vb4kk")
batteries_cost = 0
steel_cost = 0
costs_items = Array[ExtResource("4_6gc8i")]([])
requires_items = Array[ExtResource("4_6gc8i")]([])

[node name="PlaceItemInteractable" type="Node2D"]
script = ExtResource("1_odatr")
item_pickup_packed_scene = ExtResource("2_m2hek")

[node name="InventoryRequirementInteractionArea" parent="." instance=ExtResource("2_dda3f")]
script = ExtResource("3_epj6w")
inventory_requirement = SubResource("Resource_n50sa")

[connection signal="insufficient_requirements" from="InventoryRequirementInteractionArea" to="." method="_on_inventory_requirement_interaction_area_insufficient_requirements"]
[connection signal="requirements_met" from="InventoryRequirementInteractionArea" to="." method="_on_inventory_requirement_interaction_area_requirements_met"]
